Added type definition export to package.json
This commit adds a `types` entry to package.json. This will allow
TypeScript projects to import CodeMirror types
via `import {EditorView} from "@codemirror/next" without needing to
modify TypeScript lookup paths

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "author": "Marijn Haverbeke <marijnh@gmail.com>",
   "type": "module",
+  "types": "./view/src/index.d.ts",
   "exports": {
     "./state": "./state/dist/index.js",
     "./text": "./text/dist/index.js",
